# vertigo-forms

./: .gitignore  CHANGES.md  Cargo.toml  README.md
.github/workflows/: pipeline.yaml
examples/form/: Cargo.toml
examples/form/src/: lib.rs
examples/manual_form/: Cargo.toml
examples/model_form/: Cargo.toml
examples/model_form/src/: lib.rs
src/: button.rs  drop_image_file.rs  image_upload.rs  input.rs  lib.rs  login.rs  popup.rs  search_panel.rs  select.rs  select_search.rs  spinner.rs  switch.rs  with_loader.rs
src/form/: field.rs  form_data.rs  mod.rs
src/form/data/: data_field.rs  form_data.rs  form_export.rs  mod.rs
src/form/render/: field.rs  fields.rs  mod.rs  tabs.rs
src/input/: input.rs  input_with_button.rs  list_input.rs  mod.rs
src/resource_table/: mod.rs  row_form.rs  row_from_data_section.rs
src/select/: dict_select.rs  mod.rs  multi_drop_down.rs  multi_select.rs  select.rs
src/tabs/: mod.rs
storybook/: Cargo.toml
storybook/src/: drop_image_file.rs  form.rs  input.rs  lib.rs  login.rs  multi_drop_down.rs  multi_select.rs  popup.rs  search_panel.rs  select.rs  select_search.rs  switch.rs  tabs.rs  with_loader.rs
storybook/src/form/: form1.rs  form2.rs  mod.rs  tabbed_form.rs
storybook/src/resource_table/: data_section.rs  mod.rs  text_field.rs
storybook/src/tabs/: mod.rs  tabs_with_dyn_attrs.rs
