[workspace]
members = ["storybook", "examples/form"]

[package]
name = "vertigo-forms"
version = "0.1.0"
authors = ["Michał Pokrywka <wolfmoon@o2.pl>"]
edition = "2021"

[dependencies]
base64 = "0.22"
either = "1.15.0"
vertigo = "0.7"

[patch.crates-io]
vertigo = { git = "https://github.com/vertigo-web/vertigo", branch = "tailwind-support" }
