[package]
name = "vertigo-forms-storybook"
version = "0.1.0"
authors = ["Michał Pokrywka <wolfmoon@o2.pl>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# vertigo = "0.5"
vertigo = { git = "https://github.com/vertigo-web/vertigo", branch = "reactive-trait" }
# vertigo = { path = "../../vertigo/crates/vertigo" }
vertigo-forms = { path = ".." }
